text change to Refactoring My Blog

--- a/src/writings/Refactoring My Blog.mdx
+++ b/src/writings/Refactoring My Blog.mdx
@@ -6,7 +6,7 @@ title: "Refactoring My Portfolio"
 
 I’ve always taken pride in this site. I’ve always designed and developed it myself. Standing Dreams was more than just my portfolio, it was a lifestyle blog of the things that I felt was cool. My “dreams while standing”. I designed it in Photoshop and built it using WordPress, SCSS and jQuery. Everything was custom and I took pride in that. I blogged almost every day. It really was a joy to me.
 
-Blogging became too much as I got deeper into my development career. I began interviewing for more roles and so I made the site my portfolio. I designed this look and feel and used my favorite CMS at the time to run the content. I really love this look and feel but as the years went on, the engine under the hood began to age. I found myself migrating away from PHP and into he arms of JavaScript. I wanted something fresh without a redesign. That’s when my love affair with Gatsby began.
+Blogging became too much as I got deeper into my development career. I began interviewing for more roles and so I made the site my portfolio. I designed this look and feel and used my favorite CMS at the time to run the content. I really love this look and feel but as the years went on, the engine under the hood began to age. I found myself migrating away from PHP and into the arms of JavaScript. I wanted something fresh without a redesign. That’s when my love affair with Gatsby began.
 
 I started experimenting with Gatsby for some freelance projects and absolutely loved it. I refactored my mother-in-law’s pet store website into a Gatsby website. I used it to develop a series of marketing sites for a medical workspace. I planned out a Gatsby vs NextJS YouTube series. It was only a matter of time before Standing Dreams became my target. When I finally did start, I became obsessed with the right headless CMS to use. I experimented with Directus, Strapi, Butter CMS, Contentful, DatoCMS, Cosmic, TakeShape, Prismic and a lot more. I actually was making a video comparing all the CMS using my site for the case study. I stopped midway through because my wife got pregnant and my attention went into preparing for Jaden so ALL the videos ended up on a hard drive somewhere. Prismic ended up taking the cake for me and that’s what I’ve used as a headless CMS for sites.
 
